checking the back end wiring
